Got the data in! Quite unhappy with the coloring.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <script type="text/javascript" src="_libs/jquery-2.0.3.js"></script>
     <script type="text/javascript" src="_libs/d3.v3.js"></script>
+    <script type="text/javascript" src="_libs/queue.v1.js"></script>
     <script type="text/javascript" src="_libs/topojson.v1.js"></script>
     <script type="text/javascript" src="_libs/dat.gui.js"></script>
     <script type="text/javascript" src="_js/utils.js"></script>
