--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="utf-8">
 
-    <script type="text/javascript" src="_libs/jquery-2.0.3.js"></script>
-    <script type="text/javascript" src="_libs/d3.v3.js"></script>
-    <script type="text/javascript" src="_libs/topojson.v1.js"></script>
-    <script type="text/javascript" src="_libs/dat.gui.js"></script>
-    <script type="text/javascript" src="_js/utils.js"></script>
+    <link rel="stylesheet" type="text/css" href="_twbs/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="_twbs/css/bootstrap-theme.min.css">
 
     <link rel="stylesheet" type="text/css" href="_css/main.css">
 </head>
 
 <body>
+    <h1>Hello, world!</h1>
     <div id="main"></div>
 
+    <script type="text/javascript" src="_libs/jquery-2.0.3.js"></script>
+    <script type="text/javascript" src="_twbs/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="_libs/d3.v3.js"></script>
+    <script type="text/javascript" src="_libs/topojson.v1.js"></script>
+    <script type="text/javascript" src="_libs/dat.gui.js"></script>
+    <script type="text/javascript" src="_js/utils.js"></script>
     <script type="text/javascript" src="_js/main.js"></script>
 </body>
 
