--- a/index.html
+++ b/index.html
@@ -10,12 +10,35 @@
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
-    <div id="main"></div>
+    <div class="navbar navbar-inverse navbar-fixed-top" id="topNav" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Project name</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a>
+                    </li>
+                    <li><a href="#about">About</a>
+                    </li>
+                    <li><a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </div>
+    <div id="main"></div><!-- /#main -->
 
     <script type="text/javascript" src="_libs/jquery-2.0.3.js"></script>
     <script type="text/javascript" src="_twbs/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="_libs/d3.v3.js"></script>
+    <script type="text/javascript" src="_libs/queue.v1.js"></script>
     <script type="text/javascript" src="_libs/topojson.v1.js"></script>
     <script type="text/javascript" src="_libs/dat.gui.js"></script>
     <script type="text/javascript" src="_js/utils.js"></script>
