--- a/index.html
+++ b/index.html
@@ -12,55 +12,87 @@
 <body>
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default" id="topNav" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-text" href="#"><span class="glyphicon glyphicon-list"></span></a>
+            <a class="navbar-brand" href="#">The Mortality Attitude Index</a>
         </div>
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav" id="navMenuLeft"></ul>
-  </div><!-- /.navbar-collapse -->
-</nav><!-- /#topNav -->
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="dropdown">
+                    <a href="#" id="navDropdownTitle" class="dropdown-toggle" data-toggle="dropdown">Select Behavioral Risk Data Filter <b class="caret"></b></a>
+                    <ul class="dropdown-menu" id="navDropdownLeft"></ul>
+                </li>
+            </ul>
+            <a class="navbar-right navbar-text" href="#"><span class="glyphicon glyphicon-info-sign"></span></a>
+            <a class="navbar-right navbar-text" href="#"><span class="glyphicon glyphicon-question-sign"></span></a>
+            <form class="navbar-form navbar-right navbar-text">
+                <div class="checkbox form-group">
+                <label>Toggle Borders:</label>
+                    <label>
+                        <input type="checkbox" id="togglenew" name="new-borders" checked> New America
+                    </label>
+                    <label>
+                        <input type="checkbox" id="togglestates" name="state-borders" checked> States
+                    </label>
+                </div>
+            </form>
+        </div>
+        <!-- /.navbar-collapse -->
+    </nav>
     <div class="container">
+    <div class="page-header" id="hdrTitle">
+      <h2>&nbsp;</h2>
+      <p class="lead" id="desc">&nbsp;</p>
+      <p id="ques">&nbsp;<br/>&nbsp;</p>
+    </div>
         <div class="row">
             <div class="col-md-10" id="gridLeft">
-              <div id="map-container">
-                  <div id="map-main"></div><!-- /#map-main -->
-              </div><!-- /#map-container -->
-            </div><!--/span-->
+                <div id="map-container">
+                    <div id="map-main"></div>
+                    <!-- /#map-main -->
+                </div>
+                <!-- /#map-container -->
+            </div>
+            <!--/span-->
 
             <div class="col-md-2" id="legend">
                 <div id="key-container">
-                    <div class="key-heading">
-                        <h3 class="key-title">Legend</h3>
-                    </div>
-                    <div class="key-body" id="key-main"></div><!-- /#key-main -->
-                </div><!-- /#key-container -->
+                    <div class="key-heading"><h3>Key Heading</h3></div>
+                    <!-- /.key-heading -->
+                </div>
+                <!-- /#key-container -->
                 <div id="county-data">
-                  <div class="key-heading">
+                    <div class="key-heading">
                         <h3>County data</h3>
                         <p>Mouseover map for detail</p>
                     </div>
                     <div class="key-body" id="county-main">
-                      <div id="county-info"></div>
-                      <div id="county-chart"></div>
+                        <div id="county-info"></div>
+                        <div id="county-chart"></div>
                     </div>
                 </div>
-            </div><!--/span-->
-        </div><!-- /.row -->
+            </div>
+            <!--/span-->
+        </div>
+        <!-- /.row -->
 
-    </div><!-- /.container -->
+    </div>
+    <!-- /.container -->
 
     <script type="text/javascript" src="_libs/jquery-2.0.3.js"></script>
     <script type="text/javascript" src="_twbs/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="_libs/d3.v3.js"></script>
     <script type="text/javascript" src="_libs/queue.v1.js"></script>
     <script type="text/javascript" src="_libs/topojson.v1.js"></script>
-    <script type="text/javascript" src="_libs/spin.min.js"></script>
     <script type="text/javascript" src="_js/utils.js"></script>
     <script type="text/javascript" src="_js/main.js"></script>
 </body>
