--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                     <label>
                         <input type="checkbox" id="togglestates" name="state-borders" checked> States
                     </label>
+                    <label>
+                        <input type="checkbox" id="toggleus" name="us-borders" checked> Nation
+                    </label>
                 </div>
             </form>
         </div>
