--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
                 <!-- /#key-container -->
                 <div id="county-data">
                     <div class="key-heading">
-                        <h3>County data</h3>
-                        <p>Mouseover map for detail</p>
+                        <h3>County data <small>Mouseover map for detail</small></h3>
                     </div>
                     <div class="key-body" id="county-main">
-                        <div id="county-info"></div>
+                        <div id="county-info"><h4>&nbsp;</h4><p>&nbsp;</p></div>
                         <div id="county-chart"></div>
+                        <div id="county-detail"></div>
                     </div>
                 </div>
             </div>
