--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                 <!-- /#key-container -->
                 <div id="county-data">
                     <div class="key-heading">
-                        <h3>County data <small>Mouseover map for detail</small></h3>
+                        <h3>County data<br/><small>Mouseover map for detail</small></h3>
                     </div>
                     <div class="key-body" id="county-main">
-                        <div id="county-info"><h4>&nbsp;</h4><p>&nbsp;</p></div>
+                        <div id="county-info"><h4>&nbsp;</h4><p>&nbsp;<br/>&nbsp;</p></div>
                         <div id="county-chart"></div>
                         <div id="county-detail"></div>
                     </div>
