Enhanced color of bar chart

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <!-- /#key-container -->
                 <div id="county-data">
                     <div class="key-heading">
-                        <h3>County data <small>Mouseover map for detail</small></h3>
+                        <h3>County data<br/><small>Mouseover map for detail</small></h3>
                     </div>
                     <div class="key-body" id="county-main">
                         <div id="county-info"><h4>&nbsp;</h4><p>&nbsp;</p></div>
