--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <div class="page-header" id="hdrTitle">
                 <h2>&nbsp;</h2>
                 <p class="lead" id="desc">&nbsp;</p>
-                <p id="ques">&nbsp;
-                    <br/>&nbsp;</p>
+<!--                 <p id="ques">&nbsp;
+                    <br/>&nbsp;</p> -->
             </div>
             <div class="row">
                 <div class="col-md-10" id="gridLeft">
@@ -77,7 +77,7 @@
                 <div class="col-md-2" id="legend">
                     <div id="key-container">
                         <div class="key-heading">
-                            <h3>Key Heading</h3>
+                            <h3>Rate in %</h3>
                         </div>
                         <!-- /.key-heading -->
                     </div>
