Committing uncommitted code. Final info added, readme update, tweaks to barcharts

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <div class="navmenu navmenu-default navmenu-fixed-left" id="slideout">
         <div class="container">
             <p class="slidehead">About this Project</p>
-            <p>Inspired by <a href="http://www.tufts.edu/alumni/magazine/fall2013/features/up-in-arms.html" target="_blank">this article</a> published Fall 2013 in Tufts University Alumni Magazine, I decided to conduct a data study for myself to determine if there is a discernable pattern for regional attitudes towards health and human mortality.</p>
-            <p>The red borders define "The American Nations of Today" as demarcated in the article (below):</p>
+            <p>Inspired by <a href="http://www.tufts.edu/alumni/magazine/fall2013/features/up-in-arms.html" target="_blank">this article</a> published Fall 2013 in Tufts University Alumni Magazine, I decided to conduct a data study to determine if there is data-based discernible pattern for regional attitudes towards health and human mortality.</p>
+            <p>The red borders define "The American Nations of Today" as demarcated in <a href="http://www.tufts.edu/alumni/magazine/fall2013/features/up-in-arms.html" target="_blank">the article</a> (below):</p>
             <p><a href="_img/upinarms-map-1024.jpg" data-toggle="lightbox"><img src="_img/upinarms-map-1024.jpg" style="width:260px"/></a></p>
+            <p>The data sets were selected from the <a href="http://www.cdc.gov/brfss/" target="_blank">CDC's Behavioral Risk Factor Surveillance System</a> </p>
             <p> <a href=""><i class="fa fa-github-square fa-2x"></i></a></p>
         </div>
     </div>
@@ -30,7 +31,7 @@
                 <span class="icon-bar"></span>
             </button>
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">The Mortality Attitude Index</a>
+                <a class="navbar-brand" href="#">The Behavioral Mortality Index</a>
             </div>
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
